<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.movieapp.viewmodels.UploadMovieViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_15">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_dp"
            app:layout_constraintBottom_toTopOf="@id/btnCancel"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero_dp">

                <TextView
                    android:id="@+id/tvCategoryBg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="@drawable/bg_rounded_corners"
                    android:padding="@dimen/dp_10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvAddingTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:fontFamily="@font/sans_normal_medium"
                    android:includeFontPadding="true"
                    android:text="@string/adding_to"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintBottom_toBottomOf="@id/tvCategoryBg"
                    app:layout_constraintStart_toStartOf="@id/tvCategoryBg"
                    app:layout_constraintTop_toTopOf="@id/tvCategoryBg" />

                <TextView
                    android:id="@+id/tvCategoryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_3"
                    android:fontFamily="@font/sans_normal_bold"
                    android:includeFontPadding="true"
                    android:textColor="@color/purple_700"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintBottom_toBottomOf="@id/tvCategoryBg"
                    app:layout_constraintStart_toEndOf="@id/tvAddingTo"
                    app:layout_constraintTop_toTopOf="@id/tvCategoryBg" />


                <TextView
                    android:id="@+id/tvMovieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:fontFamily="@font/sans_normal_bold"
                    android:includeFontPadding="true"
                    android:text="@string/movie_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCategoryBg" />

                <EditText
                    android:id="@+id/etMovieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:background="@drawable/et_bg_color"
                    android:ellipsize="end"
                    android:hint="@string/enter_name_of_movie"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="@dimen/dp_10"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieTitle" />

                <TextView
                    android:id="@+id/tvMovieDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_25"
                    android:fontFamily="@font/sans_normal_bold"
                    android:includeFontPadding="true"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etMovieTitle" />

                <EditText
                    android:id="@+id/etMovieDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:background="@drawable/et_bg_color"
                    android:ellipsize="end"
                    android:hint="@string/tell_some_details_about_movie"
                    android:maxLines="5"
                    android:padding="@dimen/dp_10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieDescription" />

                <TextView
                    android:id="@+id/tvChooseRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_25"
                    android:fontFamily="@font/sans_normal_bold"
                    android:includeFontPadding="true"
                    android:text="@string/choose_rating"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etMovieDescription" />

                <TextView
                    android:id="@+id/tvSelectedRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:background="@drawable/et_bg_color"
                    android:fontFamily="@font/sans_normal_bold"
                    android:padding="@dimen/dp_10"
                    android:text="@string/one"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvChooseRating" />

                <ImageView
                    android:id="@+id/ivDropArrow"
                    android:layout_width="@dimen/dp_35"
                    android:layout_height="@dimen/dp_35"
                    android:layout_marginEnd="@dimen/dp_15"
                    android:background="@drawable/ic_icon_arrow_drop_down"
                    app:layout_constraintBottom_toBottomOf="@id/tvSelectedRating"
                    app:layout_constraintEnd_toEndOf="@id/tvSelectedRating"
                    app:layout_constraintTop_toTopOf="@id/tvSelectedRating" />

                <TextView
                    android:id="@+id/tvUploadImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_25"
                    android:fontFamily="@font/sans_normal_bold"
                    android:includeFontPadding="true"
                    android:text="@string/upload_image"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSelectedRating" />

                <TextView
                    android:id="@+id/tvChooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="@drawable/bg_rounded_corners"
                    android:drawablePadding="@dimen/dp_5"
                    android:gravity="center|start"
                    android:hint="@string/choose_image"
                    android:padding="@dimen/dp_10"
                    android:textSize="@dimen/sp_15"
                    app:drawableStartCompat="@drawable/ic_icon_camera"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvUploadImage" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivMovieIcon"
                    android:layout_width="@dimen/dp_105"
                    android:layout_height="@dimen/dp_105"
                    android:layout_marginTop="@dimen/dp_20"
                    android:background="@drawable/ic_icon_placeholder"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvChooseImage"
                    app:shapeAppearanceOverlay="@style/roundedImageView" />

                <TextView
                    android:id="@+id/tvRemove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:alpha=".4"
                    android:enabled="false"
                    android:fontFamily="@font/sans_normal_bold"
                    android:includeFontPadding="true"
                    android:paddingBottom="@dimen/dp_40"
                    android:text="@string/remove"
                    android:textColor="@color/red"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivMovieIcon" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:backgroundTint="@color/light_grey"
            android:fontFamily="@font/sans_normal_bold"
            android:padding="@dimen/dp_10"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="@dimen/sp_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnConfirm"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/buttonStyle" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:fontFamily="@font/sans_normal_bold"
            android:padding="@dimen/dp_10"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textSize="@dimen/sp_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            app:shapeAppearanceOverlay="@style/buttonStyle" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>